--- a/src/styles.css
+++ b/src/styles.css
@@ -86,11 +86,8 @@ html {
   flex-direction: column;
 }
 
-.text-center > h1 {
-  display: flex;
-  /* flex: 1; */
-  flex-wrap: wrap;
-  flex-direction: row;
+.text-center > h5 {
+  font-size: 1.5rem;
 }
 
 #header {
@@ -147,18 +144,21 @@ li > a:hover {
 }
 
 .img {
-  grid-row: 2 / -1;
+  grid-row: 2 / 4;
   grid-column: 1/3;
-  justify-content: center;
+  justify-self: center;
+  align-self: flex-start;
 }
 
 .my-pic-1 {
-  margin-left: 5%;
+  /* margin-left: 5%; */
   border-radius: 50%;
-  width: 80%;
-  height: 70%;
+  width: 150px;
+  height: 150px;
+  /* margin-top: 0.5rem; */
 }
 .content-1 {
+  padding-right: 1rem;
   grid-row: 2/4;
   grid-column: 3/-1;
   justify-content: center;
@@ -167,18 +167,19 @@ li > a:hover {
 }
 
 .button-1 {
+  /* display: inline; */
+  padding-top: 1rem;
   grid-row: 4/-1;
-  grid-column: 3/-2;
-  align-self: center;
+  grid-column: 3/-1;
+  /* align-self: center; */
+  font-size: small;
+  justify-self: flex-start;
 }
 
 .button-1 > a {
   background-color: #f26b38;
-  border: none;
   color: white;
   padding: 8px;
-  text-align: center;
-  text-decoration: none;
   border: 2px solid #fff;
 }
 
@@ -186,6 +187,7 @@ li > a:hover {
   background-color: white;
   color: #f26b38;
   border: 1px solid #f26b38;
+  text-decoration: none;
 }
 
 .exp-and-edu-1 {
@@ -227,7 +229,7 @@ li > a:hover {
   display: inline;
   font-size: 13px;
   margin-left: 3%;
- font-family: 'Roboto Mono';
+  font-family: 'Roboto Mono';
   box-shadow: inset 0 -6px 0px #ede574;
 }
 
@@ -580,7 +582,7 @@ figure:hover .show-img-1 {
   }
 
   .left-line {
-    border-left: 10px solid #f26b38;
+    border-left: 15px solid #f26b38;
     height: 100vh;
     position: fixed;
     left: 0;
@@ -588,7 +590,7 @@ figure:hover .show-img-1 {
   }
 
   .right-line {
-    border-right: 10px solid #f26b38;
+    border-right: 15px solid #f26b38;
     height: 100vh;
     position: fixed;
     right: 0;
@@ -596,7 +598,7 @@ figure:hover .show-img-1 {
   }
 
   .top-line {
-    border-top: 10px solid #f26b38;
+    border-top: 15px solid #f26b38;
     width: 100%;
     top: 0;
     z-index: 1000;
@@ -604,11 +606,102 @@ figure:hover .show-img-1 {
   }
 
   .bottom-line {
-    border-bottom: 10px solid #f26b38;
+    border-bottom: 15px solid #f26b38;
     width: 100%;
     bottom: 0;
     z-index: 1000;
     position: fixed;
+  }
+
+  .main-container {
+    overflow: hidden;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+    max-width: 768px;
+    border: 2px solid magenta;
+  }
+
+  .img {
+    grid-row: 2/4;
+  }
+
+  .button-1 {
+    display: inline-grid;
+    /* grid-column: 1/-1; */
+    margin-left: 5%;
+  }
+
+  .grid-container {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    /* display: grid; */
+    /* grid-template-columns: 20px 1fr; */
+    /* grid-template-rows: repeat(4, 1fr); */
+    width: 100%;
+  }
+
+  .about-title-1 {
+    margin: 2%;
+  }
+
+  .img {
+    justify-self: center;
+    align-self: center;
+  }
+
+  .my-pic-1 {
+    margin: 2%;
+  }
+
+  .content-1 {
+    margin: 3%;
+    padding: 3%;
+    text-align: justify;
+  }
+
+  .button-1 {
+    padding-top: 0px;
+    width: max-content;
+  }
+
+  .col-2-container {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
+
+  .education,
+  .experience {
+    padding: 5%;
+  }
+
+  .experience > h3,
+  .education > h3,
+  .about-title-1 > h3,
+  .projects > h3,
+  .awards > h3 {
+    display: inline;
+    font-size: 13px;
+    margin-left: 0.5%;
+    font-family: 'Roboto Mono';
+    box-shadow: inset 0 -6px 0px #ede574;
+  }
+
+  .awards-container > .award-1,
+  .awards-container > .award-2,
+  .awards-container > .award-3,
+  .awards-container > .award-4,
+  .awards-container > .award-5,
+  .awards-container > .award-6 {
+    margin: 2%;
+    padding: 3px;
+  }
+
+  .award-left-side {
+    font-size: 12px;
   }
 
   .project-title-1 {
@@ -617,6 +710,16 @@ figure:hover .show-img-1 {
     justify-content: flex-start;
     align-self: flex-start;
   }
+}
+
+:root {
+  --text: #5362f6; /* Blue */
+  --shadow: #c9a7dd; /* Pink */
+}
+
+.playful {
+  color: var(--text);
+  text-shadow: 6px 6px var(--shadow);
 }
 
 /* ====== */
@@ -628,7 +731,7 @@ figure:hover .show-img-1 {
   color: black;
   font-family: 'Roboto Mono';
   font-weight: bold;
-  font-size: 4rem;
+  font-size: 4.8vw;
   animation: glitch-skew 1s infinite linear alternate-reverse;
   flex: 1;
 }
