--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,7 @@
 
 body {
   font-family: 'Roboto Mono';
+  /* scroll-snap-type: y mandatory; */
 }
 
 html {
@@ -13,6 +14,28 @@ html {
   width: 100%;
   height: 100vh;
   top: 15%;
+}
+
+/* #home,
+#about,
+#awards,
+#projects {
+  scroll-snap-type: y mandatory;
+} */
+
+/* .child-center,
+.aboutMe,
+.awards,
+.projects, */
+.main-container {
+  scroll-snap-type: y mandatory;
+  /* scroll-snap-align: start; */
+}
+.text-center,
+.aboutMe-container,
+.awards-container,
+.projects-container {
+  scroll-snap-align: start;
 }
 
 #about,
@@ -90,7 +113,6 @@ html {
   font-size: 1.5rem;
 }
 
-
 .nav {
   background-color: rgb(255, 255, 255);
   position: fixed;
@@ -103,33 +125,49 @@ html {
 .nav > .nav-btn {
   display: none;
 }
+.nav-collapse {
+  width: 100%;
+}
 
-.nav > .nav-links {
-  display: flex;
-  align-items: flex-end;
+/* .nav > .nav-collapse > */
+.nav-collapse > .nav-links {
   font-size: 1em;
   font-family: 'Roboto Mono';
-  flex: 1;
-  justify-content: flex-end;
   margin-right: 30px;
+  height: 50px;
 }
 
-.nav > .nav-links > a {
+.nav-links > ul {
+  display: flex;
+  list-style-type: none;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.nav-links > ul > li {
+  margin: 2% 2% 0 0 ;
+  align-self: flex-end;
+}
+
+.nav-links > ul > li > a {
   padding: 13px 10px 13px 10px;
-  text-decoration: none;
   color: #000;
-}
 
-.nav > .nav-links > a:hover {
+}
+/* .nav > .nav-collapse >  */
+.active {
   color: #f26b38;
+}
+.nav-links > ul > li > a:hover {
+  color: #f26b38;
+  text-decoration: none;
 }
 
 .nav > #nav-check {
   display: none;
 }
 
-@media (max-width:600px) {
-
+@media (max-width: 600px) {
   .nav {
     top: 0;
     margin: 10px 0 10px 10px;
@@ -148,7 +186,8 @@ html {
     padding: 13px;
     margin-right: 15px;
   }
-  .nav > .nav-btn > label:hover,.nav  #nav-check:checked ~ .nav-btn > label {
+  .nav > .nav-btn > label:hover,
+  .nav #nav-check:checked ~ .nav-btn > label {
     background-color: rgba(255, 255, 255, 0);
   }
   .nav > .nav-btn > label > span {
@@ -156,9 +195,8 @@ html {
     width: 25px;
     height: 10px;
     border-top: 2px solid #000;
-    
   }
-  .nav > .nav-links {
+  .nav > .nav-collapse > .nav-links  {
     position: absolute;
     display: block;
     width: 100%;
@@ -170,23 +208,31 @@ html {
     left: 0px;
     z-index: 2;
   }
-  .nav > .nav-links > a {
-    display: block;
-    width: 100%;
-    margin: 2%;
+  .nav > .nav-collapse > .nav-links > ul > li > a {
+    /* display: block; */
+    /* width: 100%; */
+    /* margin: 2%; */
+    /* padding: 4%; */
   }
-  .nav > #nav-check:not(:checked) ~ .nav-links {
+
+  .nav-links > ul {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+  }
+  .nav-links > ul > li {
+    width: 100%;
+    padding: 2%;
+  }
+
+  .nav > #nav-check:not(:checked) ~ .nav-collapse > .nav-links {
     height: 0px;
   }
-  .nav > #nav-check:checked ~ .nav-links {
+  .nav > #nav-check:checked ~ .nav-collapse > .nav-links {
     height: calc(100vh - 50px);
     overflow-y: auto;
     z-index: 2;
-  }
-  .nav-links > .nav-collapse {
-
-    height: 0px;
-    /* overflow-y: auto; */
   }
 }
 
@@ -388,7 +434,7 @@ li > a:hover {
 
 .projects {
   font-family: 'Roboto Mono';
-  margin: 2% 0 2% 0%;
+  margin: 0 0 2% 0%;
   width: 100%;
   height: 100%;
 }
@@ -407,6 +453,7 @@ li > a:hover {
   flex-wrap: wrap;
   justify-content: space-between;
   margin: 2%;
+  margin-bottom: 10%;
 }
 
 .projects-container > .project-1,
@@ -499,15 +546,15 @@ li > a:hover {
   justify-self: flex-end;
   align-self: flex-start;
   margin: 4%;
-  width: 100%;
+  width: 60%;
   height: auto;
 }
 
 .project-img-4 {
   grid-row: 1/3;
   grid-column: 2/3;
-  margin: 4%;
-  width: 100%;
+  padding-left: 10%;
+  width: 60%;
   height: auto;
   justify-self: flex-end;
   align-self: flex-start;
@@ -515,7 +562,7 @@ li > a:hover {
 
 .awards {
   font-family: 'Roboto Mono';
-  margin: 2% 0 2% 0%;
+  margin: 0 0 2% 0%;
   width: 100%;
   height: 100%;
 }
@@ -630,27 +677,27 @@ figure:hover .show-img-1 {
   justify-self: flex-end;
   align-self: flex-start;
   margin-top: 4%;
-  width: 100%;
+  width: 90%;
   height: auto;
 }
 
 .award-img-3 {
   margin-top: 10%;
-  width: 100%;
+  width: 80%;
   height: auto;
   justify-self: flex-end;
   align-self: flex-start;
 }
 
 .award-img-4 {
-  width: 100%;
+  width: 80%;
   height: auto;
   justify-self: flex-end;
   align-self: flex-start;
 }
 
 .award-img-5 {
-  width: 100%;
+  width: 60%;
   height: auto;
   justify-self: flex-end;
   align-self: flex-start;
@@ -681,9 +728,11 @@ figure:hover .show-img-1 {
   height: 100px;
 }
 
+
 @media only screen and (max-width: 600px) {
   body {
     background-color: lightblue;
+    font-family: 'Roboto Mono';
   }
 
   .left-line {
@@ -795,7 +844,7 @@ figure:hover .show-img-1 {
     box-shadow: inset 0 -6px 0px #ede574;
   }
 
-  .awards-container, 
+  .awards-container,
   .projects-container {
     display: flex;
     flex-direction: row;
@@ -804,7 +853,7 @@ figure:hover .show-img-1 {
     margin: 2%;
     padding: 3%;
   }
-  
+
   .awards-container > .award-1,
   .awards-container > .award-2,
   .awards-container > .award-3,
@@ -827,7 +876,7 @@ figure:hover .show-img-1 {
   .award-left-side {
     font-size: 12px;
   }
- 
+
   .projects-container > .project-1,
   .projects-container > .project-2,
   .projects-container > .project-3,
